[package]
name = "type_fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22"
eframe = { version = "0.22.0", default-features = true, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
random_word = "0.4.1"
catppuccin-egui = "3.1.0"
egui_extras ="0.22.0"
egui-notify = { git = "https://github.com/ItsEthra/egui-notify.git" }
egui_dock = "0.6.3"
log = "0.4.19"
getrandom = { version = "0.2", features = ["js"] }
web-time = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.17.0", features = ["webgl"] }
