[package]
name = "type_fast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29"
egui_plot = "0.29"
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras ="0.29"
egui_dock = "0.14"
catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"]  }

tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
random_word = { version = "0.4", features = ["en"] }
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
web-time = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.19", features = ["webgl"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2